--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^5.1.2",
     "@astrojs/vue": "^4.5.2",
     "astro": "^4.14.2",
+    "astro-google-analytics": "^1.0.3",
     "jquery": "^3.7.1",
     "microcms-js-sdk": "^3.1.2",
     "react": "^18.3.1",
